--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    --light-color: #bc160e;
+    --dark-color: #347383;
 }
 
 .container {
@@ -14,12 +16,24 @@
 
 /* left sidebar */
 .sidebar {
-    background-color: #1c93d2;
+    background-color: var(--dark-color);
     color: white;
     grid-row: 1 / 3;
     display: flex;
     flex-direction: column;
     padding: 2rem;
+    font-weight: 500;
+}
+
+.sidebar a {
+    color: white;
+    text-decoration: none;
+    border-bottom: 2px solid transparent;
+    width: fit-content;
+}
+
+.sidebar a:hover {
+    border-bottom: 2px solid white;
 }
 
 .sidebar > ul {
@@ -33,6 +47,7 @@
     grid-template-columns: 20% 70%;
     gap: 5%;
     align-items: center;
+    cursor: pointer;
 }
 
 .sidebar img {
@@ -68,13 +83,13 @@
 
 .header-icon {
     height: 2rem;
+    cursor: pointer;
 }
 
 #profile-sm {
     height: 3rem;
     border-radius: 50%;
     margin-right: 2rem;
-    border: 1px solid hotpink;
 }
 
 .header input {
@@ -91,6 +106,11 @@
     display: grid;
     grid-template-columns: 1fr 8fr 1fr 4fr;
     align-items: center;
+}
+
+.header-top a {
+    color: black;
+    text-decoration: none;
 }
 
 .header-top > div:nth-of-type(4){
@@ -111,7 +131,7 @@
 }
 
 .header-bottom button {
-    background-color: #1c93d2;
+    background-color: var(--dark-color);
     height: 2.5rem;
     border: none;
     border-radius: 25px;
@@ -120,11 +140,15 @@
     font-size: 1rem;
     font-family: Roboto;
     margin-left: 20px;
+    transition: background-color 0.3s, color 0.3s;
+    cursor: pointer;
 }
 
-/* .header * {
-    border:1px solid red;
-} */
+.header-bottom button:hover {
+    background-color: white;
+    color: var(--dark-color);
+    outline: 1px solid var(--dark-color);
+}
 
 .header-buttons {
     display: grid;
@@ -136,23 +160,36 @@
     background-color: #e1e8ef;
     display: grid;
     grid-template-columns: 3fr 1fr;
-    grid-template-rows: 3rem 1fr;
+    grid-template-rows: 2.25rem 1fr;
     padding: 2rem;
-    gap: 20px;
+    grid-column-gap: 20px;
+}
+
+.main h2 {
+    height: fit-content;
+}
+
+.main h2:last-of-type {
+    margin-bottom: 8px;
 }
 
 .main-cards {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 15px;
+    margin-top: 0;
 }
 
 .card {
     background-color: white;
     padding: 1.75rem;
     border-radius: 7px;
-    border-left: 6px solid orange;
+    border-left: 6px solid var(--light-color);
     box-shadow: 1.5px 1.5px 8px #999;
+}
+
+.card:hover {
+    transform: scale(1.01);
 }
 
 .card-icon {
@@ -171,6 +208,9 @@
 
 .card-icons {
     text-align: right;
+    cursor: pointer;
+    margin-top: 20px;
+    height: 1.5rem;
 }
 
 .announcements-card, .trending-card {
@@ -178,6 +218,7 @@
     border-radius: 7px;
     padding: 1.75rem;
     font-size: 0.8rem;
+    box-shadow: 1.5px 1.5px 8px #999;
 }
 
 .announcements-card hr {
@@ -189,7 +230,7 @@
 }
 
 .trending-card img {
-    height: 1.5rem;
+    height: 2.5rem;
 }
 
 .trending-card {
@@ -203,3 +244,11 @@
     margin: 20px 0;
 }
 
+.trending-card > div {
+    display: grid;
+    align-items: center;
+}
+
+.roles {
+    font-weight: 400;
+}
